Editing header in CSS

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Press+Start+2P&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
+    </style>
     <title>Guess My Number!</title>
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
-      <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
+      <div id="mini-box-1">
+        <button class="btn-again">Again!</button>
+        <p class="between">(Between 1 and 20)</p>
+      </div>
+      <h1 id="h1-1">Guess My Number!</h1>
       <div class="number">?</div>
     </header>
     <main>
