Editing the main part in CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <div class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <button class="btn-check">Check!</button>
       </div>
       <div class="right">
         <p class="message">Start guessing...</p>
