--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Press+Start+2P&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Press+Start+2P&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
     </style>
     <title>Guess My Number!</title>
   </head>
@@ -26,10 +26,9 @@
       </div>
       <div class="right">
         <p class="message">Start guessing...</p>
-        <p class="label-score">💯 Score: <span class="score">20</span></p>
-        <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
-        </p>
+        <p>💯 Score: <span class="score">20</span></p>
+        <p>🥇 Highscore: <span class="highscore">0</span></p>
+        <p>👾 Guesses:<span id="guesses">0</span></p>
       </div>
     </main>
     <script src="script.js"></script>
